# Ara_Crypto_Function_Cluster_Adaptive_Autosar

./: CMakeLists.txt  FindBoost.cmake  README.md
CryptoPP_examples/: AES_ECB_128.cpp  XCHA_CHA20.cpp  hmac_sha256.cpp
Demos/: demo_aes.cpp  demo_aes_cbc.cpp  demo_auth_cipher.cpp  demo_cha_cha.cpp  demo_ecdsa.cpp  demo_hash_256.cpp  demo_hash_512.cpp  demo_hmac_256.cpp  demo_hmac_512.cpp  demo_key_storage.cpp  demo_random_generator.cpp
KeySlots/: AES_symmetric.key  ecdsa_private.key  ecdsa_public.key
Presentation/: ~$Cryptography .pptx
ara/core/: Span.h  string.h
ara/crypto/Keys/: KeySlot.cpp  KeySlot.h  KeyStorageProvider.cpp  KeyStorageProvider.h  README.md  cryptopp_io_interface.h  elementary_types.h  key_slot_content_props.h  key_slot_prototype_props.h  updates_observer.h
ara/crypto/helper/: print.h  state.h
ara/crypto/private/common/: entry_point.h  io_interface.h  mem_region.h  volatile_trusted_container.h
ara/crypto/private/cryp/: auth_cipher_ctx.h  block_service.h  crypto_provider.h  digest_service.h  extension_service.h  hash_function_ctx.h  random_generator_ctx.h  signature_service.h  stream_cipher_ctx.h  symmetric_block_cipher_ctx.h
ara/crypto/private/cryp/cryobj/: crypto_object.h  private_key.h  public_key.h  secret_seed.h  signature.h
ara/crypto/private/keys/: elementary_types.h  key_slot_content_props.h  key_slot_prototype_props.h  key_storage_provider.h  keyslot.h
ara/crypto/public/Manifest/: CryptoKeySlotManifest.json
ara/crypto/public/common/: cryptopp_io_interface.h
ara/crypto/public/cryp/: cryptopp_aes_cbc_128_stream_cipher_ctx.cpp  cryptopp_aes_cbc_128_stream_cipher_ctx.h  cryptopp_aes_cbc_128_symmetric_block_cipher_ctx.cpp  cryptopp_aes_cbc_128_symmetric_block_cipher_ctx.h  cryptopp_aes_ecb_128_symmetric_block_cipher_ctx.cpp  cryptopp_aes_ecb_128_symmetric_block_cipher_ctx.h  cryptopp_aes_symmetric_block_cipher_ctx.cpp  cryptopp_aes_symmetric_block_cipher_ctx.h  cryptopp_auth_cipher_ctx.cpp  cryptopp_auth_cipher_ctx.h  cryptopp_chacha_stream_cipher_ctx.cpp  cryptopp_chacha_stream_cipher_ctx.h  cryptopp_crypto_provider.cpp  cryptopp_crypto_provider.h  cryptopp_ecdsa_msg_recovery_public_ctx.cpp  cryptopp_ecdsa_sha_256_msg_recovery_public_ctx.cpp  cryptopp_ecdsa_sha_256_sig_encode_private_ctx.cpp  cryptopp_ecdsa_sig_encode_private_ctx.cpp  cryptopp_hmac_sha_256_message_authn_code_ctx.cpp  cryptopp_hmac_sha_512_message_authn_code_ctx.cpp  cryptopp_hmac_sha_512_message_authn_code_ctx.h  cryptopp_random_generator_ctx.cpp  cryptopp_random_generator_ctx.h  cryptopp_rsa_2046_encryptor_public_ctx.h  cryptopp_sha_256_hash_function_ctx.cpp  cryptopp_sha_256_hash_function_ctx.h  cryptopp_sha_512_hash_function_ctx.cpp  cryptopp_sha_512_hash_function_ctx.h
ara/crypto/public/cryp/cryobj/: cryptopp_aes_128_symmetric_key.h  cryptopp_ecdsa_sha_256_private_key.h  cryptopp_ecdsa_sha_256_public_key.h  cryptopp_hmac_sha_256_signature.h  cryptopp_hmac_sha_256_symmetric_key.h  cryptopp_hmac_sha_512_signature.h  cryptopp_hmac_sha_512_symmetric_key.h  cryptopp_rsa_2046_private_key.h  cryptopp_rsa_2046_public_key.h  cryptopp_symmetric_key.h  loadKey.h
ara/crypto/public/keys/: cryptopp_key_slot.h  cryptopp_key_storage_provider.h
contexts_samples/: example_aes.cpp  example_auth_cipher_ctx.cpp  example_ecdsa_contexts.cpp  example_hashctx.cpp  example_hmac_Ctx.cpp  example_random_generator_ctx.cpp
samples/: example_span.cpp
